--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "devDependencies": {
+    "serve": "^11.3.0"
+  }
 }
